--- a/conda-environment.yml
+++ b/conda-environment.yml
@@ -1,9 +1,18 @@
+name: explore-jaeb
 channels:
   - defaults
   - conda-forge
 dependencies:
+  - black==19.10b0
+  - flake8==3.7.9
+  - numpy=1.16.4
+  - pandas=0.24.2
   - pip==20.0.2
+  - plotly=4.4.1
   - plotly-orca==1.3.1
-  - python=3.6
+  - python=3.7.3
   - pip:
-      - -r file:requirements.txt
+    - -r file:requirements.txt
+    - git+git://github.com/tidepool-org/data-science-models
+    - git+git://github.com/tidepool-org/loop-issue-report@rpw/initial
+    - pyloopkit-test
