--- a/conda-environment.yml
+++ b/conda-environment.yml
@@ -13,6 +13,9 @@ dependencies:
   - python=3.7.3
   - pip:
     - -r file:requirements.txt
+    - orjson==3.1.2
+    - flatten-json==0.1.7
+    - pyarrow==0.17.1
     - git+git://github.com/tidepool-org/data-science-models
     - git+git://github.com/tidepool-org/loop-issue-report@rpw/initial
     - pyloopkit-test
