--- a/conda-environment.yml
+++ b/conda-environment.yml
@@ -15,6 +15,7 @@ dependencies:
     - -r file:requirements.txt
     - orjson==3.1.2
     - pyarrow==0.17.1
+    - ipython==7.16.1
     - git+git://github.com/tidepool-org/data-science-models
     - git+git://github.com/tidepool-org/loop-issue-report@rpw/initial
     - pyloopkit-test
